--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
+    "cordova-android": "^9.0.0",
     "cordova-browser": "^6.0.0",
-    "cordova-plugin-whitelist": "^1.3.4"
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-plugin-zip": "^3.1.0",
+    "cordova-windows": "^7.0.1"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-zip": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "windows",
+      "android"
     ]
   }
 }
